Fixed button alignment with content in dialog component

--- a/src/app/modules/news-feed/components/dialog/dialog.component.css
+++ b/src/app/modules/news-feed/components/dialog/dialog.component.css
@@ -31,5 +31,5 @@ p{
 }
 
 .goto {
-    margin-left: -3%;
+    margin-left: -9%;
 }
